fixed header spacing

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -33,7 +33,6 @@ header nav{
     position: relative;
     display: flex;
     align-items: center;
-    width: 30%;
 }
 
 header nav ul {
@@ -90,7 +89,6 @@ header nav li {
     background-color: #266a2e;
     color: #f0d86e;
     padding: 5px 15px;
-    margin-left: 60%;
 }
 
 .menuWord:hover {
